# uav-disease-detection

./: .gitignore  Makefile  README.md  mosquitto.conf
dashboard/: README.md  index.html  styles.css
dashboard/js/: api.js  main.js  map.js  ui.js
drone-protocol/: Cargo.toml
drone-protocol/src/: lib.rs
fastapi/app/: inference.py  main.py  model.py  utils.py
fastapi/frontend/: .env  index.html  package-lock.json  package.json  vite.config.ts
fastapi/frontend/src/: App.svelte  app.css
fastapi/frontend/src/components/: History.svelte  ImageUpload.svelte  MapView.svelte  ResultCard.svelte  Sidebar.svelte  Telemetry.svelte  Topbar.svelte  UavControls.svelte
fastapi/frontend/src/lib/: api.ts  mqtt.ts  types.ts  utils.ts
uav-flight-control/: Cargo.toml  Makefile  memory.x
uav-flight-control/.cargo/: config.toml
uav-flight-control/src/: board.rs  flight.rs  flight_control.rs  main.rs  math.rs  position.rs  protocol.rs  writer.rs
uav-flight-control/src/drivers/: ahrs.rs  icm42688p.rs  lowpass.rs  mod.rs  motors.rs  pid.rs  usb_serial.rs
uav-flight-controller/: Cargo.toml
uav-flight-controller/src/: delay.rs  lib.rs  mqtt_client.rs  mqtt_utils.rs
uav-surveillance/: .env  Cargo.toml  build.rs  sdkconfig.defaults
uav-surveillance/.cargo/: config.toml
uav-surveillance/.github/workflows/: rust_ci.yml
uav-surveillance/.zed/: settings.json
uav-surveillance/src/: bridge.rs  camera.rs  comms.rs  delay.rs  frame_uploader.rs  lib.rs  main.rs  mqtt.rs  stream.html  stream_server.rs  wifi.rs
uav-surveillance/src/mqtt/: client.rs  mod.rs  session.rs  tasks.rs  utils.rs
