[package]
name = "uav-flight-control"
version = "0.1.0"
authors = ["Byt3Mage <alayakiire@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.82"

[[bin]]
name = "uav-flight-control"
harness = false

[dependencies]
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
stm32h7xx-hal = { version = "0.16.0", features = ["stm32h743v", "rt", "usb_hs"] }
embedded-hal = "0.2.6"

rtic = { version = "2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2", features = ["stm32h743vi"] }

synopsys-usb-otg = {version = "0.5.0", features = ["hs"]}
usb-device = "0.3"
usbd-serial = "0.2"

# Logging
panic-halt = "1.0"
# Sensor fusion (runs on PC too for testing)
micromath = "2"

heapless = "0.9.2"
simple-ternary = "0.3.0"
# thiserror = {version = "2.0.18", default-features = false}

[profile.release]
opt-level = "s"
debug = true
lto = true
codegen-units = 1

[profile.dev]
opt-level = "z"
debug = true
