[package]
edition = "2024"
name = "uav-flight-controller"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "uav-flight-controller"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
    "esp-alloc",
    "esp-radio",
    "esp32s3",
    "log-04",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }
log = "0.4.29"

critical-section = "1.2.0"
embedded-io = "0.6.1"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-radio = { version = "0.17.0", features = [
    "esp-alloc",
    "esp32s3",
    "log-04",
    "smoltcp",
    "unstable",
    "wifi",
] }

smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "proto-ipv6",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
] }

anyhow = { version = "1.0.102", default-features = false }

blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "b3ecefc222d8806edd221f266999ca339c52d34e", default-features = false, features = [
    "dhcpv4",
    "tcp",
] }

heapless = { version = "0.9.1" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
