[package]
edition = "2024"
name = "uav-surveillance"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "uav-surveillance"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "log-04", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
    "esp-alloc",
    "esp-radio",
    "esp32s3",
    "log-04",
    "embassy",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3", "log-04"] }


critical-section = "1.2.0"
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-radio = { version = "0.17.0", features = [
    "esp-alloc",
    "esp32s3",
    "log-04",
    "smoltcp",
    "unstable",
    "wifi",
] }

smoltcp = { version = "0.12.0", default-features = false, features = [
    "log",
    "medium-ethernet",
    "multicast",
    "proto-dhcpv4",
    "proto-dns",
    "proto-ipv4",
    "socket-dns",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
    "dns-max-server-count-4",
] }

embassy-net = { version = "0.7.1", features = [
    "log",
    "dhcpv4",
    "medium-ethernet",
    "tcp",
    "udp",
    "dns",
] }

static_cell = "2.1.1"

embassy-sync = { version = "0.7.2", features = ["log"] }
embassy-executor = "0.9.1"
embassy-time = "0.5.1"
log = "0.4.29"
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.0" }
embassy-futures = { version = "0.1.2", features = ["log"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
